compiler/testData/diagnostics/testsWithStdLib/coroutines/release/suspend.fir.kt
// SKIP_TXT

suspend fun test() {
    <!NON_MODIFIER_FORM_FOR_BUILT_IN_SUSPEND!>suspend<!> {}
}
